scroll issue fixed, Z-index used to stop overflow

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     padding-right: 15px;
     padding-top: 10px;
     padding-bottom: 5px;
+    z-index: 100;
     
 }
 
@@ -45,6 +46,7 @@
     grid-template-columns: repeat(3, 0.3fr);
     grid-template-rows: repeat(2, 0.3fr);
     gap: 20px;
+    z-index: 19;
     justify-content: flex-end;
 }
 
